--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
 language: ruby
 cache: bundler
 rvm:
-- ruby-head
+- 2.1.0
 - 2.0.0
 - 1.9.3
+services:
+- redis-server
 notifications:
   email: false
   irc:
