--- a/circle.yml
+++ b/circle.yml
@@ -1,3 +1,6 @@
+machine:
+  services:
+  - redis
 dependencies:
   override:
   - 'for i in $(cat .circle-ruby) ; do rvm-exec $i gem update --system --no-doc || exit 1 ; done'
